# rust-rocket-psql

./: Cargo.toml  README.md  Rocket.toml  makefile  todo.md
src/: main.rs
